--- a/package.json
+++ b/package.json
@@ -3,14 +3,16 @@
   "version": "0.0.1",
   "description": "My awesome AppGyver Steroids project.",
   "repository": "N/A",
-  "readme":"N/A",
+  "readme": "N/A",
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "devDependencies": {
-    "grunt-steroids": "0.x"
+    "grunt-steroids": "0.x",
+    "grunt-contrib-less": "^0.11.3",
+    "grunt-contrib-jade": "^0.12.0"
   },
   "license": "none",
   "engines": {
